2012-09-05  Andrew Pinski  <apinski@cavium.com>

FSF PR tree-opt/54494
	* tree-ssa-strlen.c (strlen_optimize_stmt): Don't look at statements
	which have volatile operands.